--- a/animation.html
+++ b/animation.html
@@ -6,23 +6,25 @@
     <meta charset="utf-8">
   </head>
   <h1> A wonderful day in the park </h1>
-  <p> aaaaaa The sun is setting and it is time to go home. We shall come back tommorrow for another day of fun</p>
-  <body>
+  <p> I have made this scene in the image of an average day in the park.The sun is setting.</p>
+
+<body>
     <svg width="1000" height="500">
 <rect x="0" y="400" width="1000" height="100" fill="lightgrey"/>
 <rect x="80" Y="250" width="50" height="100" fill="brown"/>
 <circle cx="105" cy="210" r="75" fill="green"/>
-  <circle cx="500" cy="40" r="40" fill="yellow">
-    <animate attributeName="cy" from="30" to="350" begin="click" dur="10s" id="circle-animation" repeatCount="indefinite"/>
-    <animate attributeName="fill" from="yellow" to="red" begin="click" dur="10s" id="circle-animation" repeatCount="indefinite"/>
- </circle>
-
+<circle cx="775" cy="40" r="40" fill="yellow">
+  <animate attributeName="cy" from="40" to="350" begin="click" dur="10s" id="circle-animation" repeatCount="indefinite"/>
+  <animate attributeName="fill" from="yellow" to="red" begin="click" dur="10s" id="circle-animation" repeatCount="indefinite"/>
+</circle>
  <rect x="400" Y="250" width="50" height="100" fill="brown"/>
  <circle cx="425" cy="210" r="75" fill="green"/>
  <rect x="750" Y="250" width="50" height="100" fill="brown"/>
  <circle cx="775" cy="210" r="75" fill="green"/>
-<polygon
-
+ <ellipse cx="150" cy="50" rx="100" ry="50" fill="white" fill-opacity="0.7"/>
+   <animate attributeName="cx" from="150" to="300" begin="click" dur="10s" id="ellipse-animation" repeatCount="indefinite"/>
+</ellipse>
+<ellipse cx="600" cy="50" rx="100" ry="50" fill="white" fill-opacity="0.7"/>
  </svg>
   </body>
 </html>
